created getAddonRiders api
