# openapi.yaml
@@ -287,3 +287,101 @@ paths:
                   message:
                     type: string
                     example: "Unauthorized access."
+
+  /quote/get-addon-premium:
+    post:
+      summary: Get Premium for Add-Ons
+      description: Calculates the premium for add-ons based on the user's details.
+      operationId: getAddonPremium
+      parameters:
+        - name: authorization
+          in: header
+          required: true
+          description: Bearer token for authorization.
+          schema:
+            type: string
+            example: "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIs..."
+        - name: Content-Type
+          in: header
+          required: true
+          description: Content type of the request.
+          schema:
+            type: string
+            example: "application/json"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                dob:
+                  type: string
+                  example: "1996/11/28"
+                smoker:
+                  type: string
+                  example: "71bff4c295cc40cf88478e1e2f0120a3"
+                cover_till_age:
+                  type: string
+                  example: "a08385b3767f41339c45c43a66214b3a"
+                premium_payment_term:
+                  type: string
+                  example: "d316419fca9a40298242480d087d9fa0"
+                payment_type:
+                  type: string
+                  example: "8d2eb199fa42458bb99f0e9fde456be7"
+                gender:
+                  type: string
+                  example: "Male"
+      responses:
+        "200":
+          description: Calculated Premium For AddOns
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: "Calculated Premium For AddOns"
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        idproduct:
+                          type: string
+                          example: "31e5162bc3a94f6c89e0b62c622efe04"
+                        product_name:
+                          type: string
+                          example: "Critical Illness Rider"
+                        product_description:
+                          type: string
+                          example: "Life’s journey made comfortable"
+                        coverage_amount:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              amount:
+                                type: string
+                                example: "50 Lakhs"
+                              text:
+                                type: string
+                                example: "@ ₹4860.42 / Quarterly"
+                              premium:
+                                type: number
+                                example: 4860.42
+        "401":
+          description: Unauthorized - Invalid token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Unauthorized access."
